syntax = "proto3";

package temperature;
service TemperatureService {

rpc getTemp(stream streamTemp) returns (stream temp) {}
rpc setTemp(temp) returns (setConfirmed) {}
 
}
message temp {
  int64 tempVal = 1;
}

message streamTemp {
    bool enabled = 1;
}

message setConfirmed {
    bool confirmed = 1;
  }
